# juicebox

./: .gitignore  Cargo.toml  README.md
src/: build.rs  controller.rs  main.rs  playlist.rs  scraper.rs  stopwatch.rs  storage.rs  timer.rs
ui/: app.slint  searchbar.slint  sidebar.slint
ui/screens/: home.slint  playlists.slint  screens.slint  search.slint  settings.slint
