[package]
name = "juicebox"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"


[[bin]]
path = "src/main.rs"
name = "juicebox"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.17.2"
slint = "1.2.2"
tokio = { version = "1.33.0", features = ["full"] }
reqwest = { version = "0.11.2", features = ["json"] }
regex = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
async-std = "1.12.0"
futures = "0.3"
serde_json = "1.0"
stream-download = "0.3.0"

[build-dependencies]
slint-build = "1.2.0"